--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                     <legend class="fieldSetLegend">2. Selecione uma operação:</legend>
                     <select name="cmbOp" id="cmbOp" class="comboOp">
                         <option id="opt1" value="NO_OP" selected>...</option>
-                        <option id="opt2" value="NO_CNS">Verificar profissionais sem CNS</option>
+                        <option id="opt2" value="NR_ESTAB">Verificar número total de estabelecimentos</option>
+                        <option id="opt3" value="NR_PROF">Verificar número total de profissionais</option>
+                        <option id="opt4" value="NO_CNS">Verificar profissionais sem CNS</option>
                     </select>
                 </fieldset>
             </div>
@@ -45,7 +47,7 @@
         <hr>
         <div>
             <div>
-                <textarea name="txtaResult" id="txtaResult" cols="30" rows="10" hidden></textarea>
+                <textarea name="txtaResult" id="txtaResult" cols="30" rows="10"></textarea>
             </div>
         </div>
     </body>
