--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <label for="btnClean" name="labelFileName" id="labelFileName" class="fileName" disabled></label>
                         <button name="btnClean" id="btnClean" class="buttonClean">Limpar</button>
                     </div>
-                    <button name="btnFileSelect" id="btnFileSelect" class="buttonMenu">Selecionar Arquivo</button>
+                    <button name="btnFileSelect" id="btnFileSelect" class="buttonMenu">Selecionar arquivo</button>
                 </fieldset>
             </div>
             <!-- Op -->
@@ -41,7 +41,7 @@
                 <fieldset class="fieldSetMenu">
                     <legend class="fieldSetLegend">
                         &emsp;<img name="imgStart" id="imgStart" src="res/green-check.png" alt="sucesso" width="20px" height="15px" hidden><b>3.</b> Execute a operação:&emsp;</legend>
-                    <button name="btnStart" id="btnStart" class="buttonMenu">Executar</button>
+                    <button name="btnStart" id="btnStart" class="buttonStart">Executar</button>
                 </fieldset>
             </div>
         </div>
