Added modal dialog box to display warnings/errors, adjusted front-end

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
         <title>Analisador de Arquivo XML do CNES</title>
     </head>
     <body>
+        <!-- Modal info box -->
+        <div id="divModal" class="modalContainer">
+            <div class="modal">
+                <h1 id="headingModal" class="modalHeader"></h1>
+                <p id="paragraphModal"></p>
+                <br>
+                <button name="btnModal" id="btnModal" class="buttonModal"></button>
+            </div>
+        </div>
         <!-- Menu -->
         <div>
             <!-- Upload -->
@@ -62,5 +71,11 @@
                 </fieldset>
             </div>
         </div>
+        <footer style="text-align: center;">
+            <a href="https://github.com/rodrigoCucick/cnes-utils">
+                <img src="res/GitHub-Mark-32px.png" alt="Link do projeto no GitHub" title="Link do projeto no GitHub">
+            </a>
+            <br><small><i>Rodrigo M. Cucick, 2022.</i></small>
+        </footer>
     </body>
 </html>
