--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                     <select name="cmbOp" id="cmbOp" class="comboOp">
                         <option id="opt1" value="NO_OP" selected>...</option>
                         <option id="opt2" value="ESTAB">Verificar estabelecimentos</option>
-                        <option id="opt3" value="PROF">Verificar profissionais</option>
-                        <option id="opt4" value="PROF_NO_CNS">Verificar profissionais sem CNS</option>
+                        <!-- <option id="opt3" value="PROF">Verificar profissionais</option> -->
+                        <!-- <option id="opt4" value="PROF_NO_CNS">Verificar profissionais sem CNS</option> -->
                     </select>
                 </fieldset>
             </div>
@@ -60,14 +60,14 @@
             <h2 class="titleResults">Resultados</h2>
             <div>
                 <fieldset class="fieldSetResult">
-                    <legend class="fieldSetLegend">&emsp;Análitico:&emsp;</legend>
-                    <textarea name="txtaResultAna" id="txtaResultAna" class="textAreaResult" disabled></textarea>
+                    <legend class="fieldSetLegend">&emsp;Analítico:&emsp;</legend>
+                    <textarea name="txtaResultAna" id="txtaResultAna" class="textAreaResult" readonly></textarea>
                 </fieldset>
             </div>
             <div>
                 <fieldset class="fieldSetResult">
                     <legend class="fieldSetLegend">&emsp;Sintético:&emsp;</legend>
-                    <textarea name="txtaResultSin" id="txtaResultSin" class="textAreaResult" disabled></textarea>
+                    <textarea name="txtaResultSin" id="txtaResultSin" class="textAreaResult" readonly></textarea>
                 </fieldset>
             </div>
         </div>
