--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <script src="libs/jquery-3.6.0.js"></script>
         <script src="src/app/parser.js"></script>
         <title>Analisador de Arquivo XML do CNES</title>
+        <!-- <link rel="icon" type="image/x-icon" href=""> -->
     </head>
     <body>
         <!-- Modal info box -->
@@ -22,7 +23,7 @@
             <div id="divFileSelect">
                 <fieldset class="fieldSetMenu">
                     <legend class="fieldSetLegend">
-                        &emsp;<img name="imgFile" id="imgFile" src="res/green-check.png" alt="sucesso" width="20px" height="15px" hidden><b>1.</b> Insira o arquivo XML do CNES:&emsp;
+                        &emsp;<img name="imgFile" id="imgFile" src="images/green-check.png" alt="sucesso" width="20px" height="15px" hidden><b>1.</b> Insira o arquivo XML do CNES:&emsp;
                     </legend>
                     <input type="file" id="inputFile" hidden>
                     <div id="divFileName" class="divFileName" hidden>
@@ -36,11 +37,11 @@
             <div id="divOp">
                 <fieldset class="fieldSetMenu">
                     <legend class="fieldSetLegend">
-                        &emsp;<img name="imgOp" id="imgOp" src="res/green-check.png" alt="sucesso" width="20px" height="15px" hidden><b>2.</b> Selecione uma operação:&emsp;</legend>
+                        &emsp;<img name="imgOp" id="imgOp" src="images/green-check.png" alt="sucesso" width="20px" height="15px" hidden><b>2.</b> Selecione uma operação:&emsp;</legend>
                     <select name="cmbOp" id="cmbOp" class="comboOp">
                         <option id="opt1" value="NO_OP" selected>...</option>
                         <option id="opt2" value="ESTAB">Verificar estabelecimentos</option>
-                        <!-- <option id="opt3" value="PROF">Verificar profissionais</option> -->
+                        <option id="opt3" value="PROF">Verificar profissionais</option>
                         <!-- <option id="opt4" value="PROF_NO_CNS">Verificar profissionais sem CNS</option> -->
                     </select>
                 </fieldset>
@@ -49,7 +50,7 @@
             <div id="divStart">
                 <fieldset class="fieldSetMenu">
                     <legend class="fieldSetLegend">
-                        &emsp;<img name="imgStart" id="imgStart" src="res/green-check.png" alt="sucesso" width="20px" height="15px" hidden><b>3.</b> Execute a operação:&emsp;</legend>
+                        &emsp;<img name="imgStart" id="imgStart" src="images/green-check.png" alt="sucesso" width="20px" height="15px" hidden><b>3.</b> Execute a operação:&emsp;</legend>
                     <button name="btnStart" id="btnStart" class="buttonStart">Executar</button>
                 </fieldset>
             </div>
@@ -76,14 +77,14 @@
             <div>
                 <fieldset class="fieldSetResult">
                     <legend class="fieldSetLegend">&emsp;Sintético:&emsp;</legend>
-                    <div name="divResultSin" id="divResultSin" class="divResult" contenteditable="false"></div>
+                    <div name="divResultSin" id="divResultSin" class="divResult synth" contenteditable="false"></div>
                 </fieldset>
             </div>
         </div>
         <!-- Footer -->
         <footer style="text-align: center;">
             <a href="https://github.com/rodrigoCucick/cnes-utils">
-                <img src="res/GitHub-Mark-32px.png" alt="Link do projeto no GitHub" title="Link do projeto no GitHub">
+                <img src="images/GitHub-Mark-32px.png" alt="Link do projeto no GitHub" title="Link do projeto no GitHub">
             </a>
             <br><small><i>Rodrigo M. Cucick, 2022.</i></small>
         </footer>
