--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <link rel="stylesheet" href="styles/styles.css">
         <script src="libs/jquery-3.6.0.js"></script>
-        <script src="src/parser/parser.js"></script>
-        <script src="src/app/app.js"></script>
+        <script src="src/js/parser/parser.js"></script>
+        <script src="src/js/app/app.js"></script>
         <title>Analisador de Arquivo XML do CNES</title>
         <!-- <link rel="icon" type="image/x-icon" href=""> -->
     </head>
